# cuda_app_gemm

./: .gitignore  1.cu  CMakeLists.txt  CMakePresets.json  INSTALL.TXT  gemm.cu  gemm_classes.cuh  gemm_profiling.cuh  gemm_samples.cuh  gemm_simple0.cu  gemm_simple1.cu  gemm_simple2.cu  gemm_simple3.cu  gemm_simple4.cu  gemm_simple5.cu  gemm_simple6.cu  gemm_utils.h  utils.h
gemm_logic/: 0_gemm_cublas.cuh  1_gemm_basic_naive.cuh  2_gemm_naive.cuh  3_gemm_tiled.cuh  4_gemm_tiled_stride.cuh  5_gemm_cudamemcpy2d.cuh
